<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hamonik.netviews.MainActivity">

    <com.hamonik.netviews.HttpForm
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:action="@string/action"
        app:baseUrl="@string/base_url"
        app:method="GET">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/username" />

            <com.hamonik.netviews.HttpEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:name="@string/username_field" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/password" />

            <com.hamonik.netviews.HttpEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:name="@string/password_field" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal">

            <com.hamonik.netviews.HttpCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                app:name="@string/student_field" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal">

            <com.hamonik.netviews.HttpRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/male"
                app:name="@string/gender_value"
                app:value="@string/male" />

            <com.hamonik.netviews.HttpRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/female"
                app:name="@string/gender_value"
                app:value="@string/female" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/country" />

            <com.hamonik.netviews.HttpSpinner
                android:id="@+id/countrySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:name="@string/country_value" />
        </LinearLayout>

        <com.hamonik.netviews.HttpSwitch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:text="@string/available"
            app:name="@string/available_value" />


        <com.hamonik.netviews.HttpButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            app:finalCornerAngle="10dp"
            app:spinning_bar_color="@android:color/white"
            app:spinning_bar_padding="4dp"
            app:spinning_bar_width="2dp" />

    </com.hamonik.netviews.HttpForm>
</RelativeLayout>
